Refactor: rename VSQ identifiers and components